Update Github link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header id="header">
     <h1>MQTT Debugger</h1>
     <span id="ws-label">This only supports WebSockets</span>
-    <a id="github-link" href="https://github.com/TzurSoffer" target="_blank" title="View on GitHub">
+    <a id="github-link" href="https://github.com/TzurSoffer/mqtt-debugger-js" target="_blank" title="View on GitHub">
       <!-- GitHub Icon (SVG) -->
       <svg height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true">
         <path fill-rule="evenodd"
