--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header id="header">
     <div class="header-left">
       <h1>MQTT Debugger</h1>
-      <span id="ws-label">Online Client-side MQTT WebSocket debugger</span>
+      <span id="ws-label">Online Client-Side MQTT WebSocket Debugger</span>
     </div>
     <div class="header-right">
       <a id="github-link" href="https://github.com/TzurSoffer/mqtt-debugger-js" target="_blank" title="View on GitHub">
