--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <!-- Theme Toggle Button with SVG -->
       <button id="toggle-theme" title="Toggle Theme">
         <svg height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true">
-          <path id="theme-icon-path" fill="currentColor"/>
+          <path id="theme-icon-path" fill="currentColor"
+          d="M8 1.333a6.667 6.667 0 1 0 6.667 6.667A6.667 6.667 0 0 1 8 1.333z"/>
         </svg>
       </button>
     </div>
